tests/ok/while-basic.ari
fn main() -> i64 {
  var value = 0;
  var total = 0;
  while value < 5 {
    value = value + 1;
    if value == 3 {
      continue;
    }
    total = total + value;
  }
  return total;
}

