tests/errors/logical-non-bool.ari
fn main() -> i64 {
  let value = 1 && true;
  return value;
}
